objects/ssot__SalesOrderPaymentSummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AppliedAmount__c</fullName>
        <label>Applied Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AuthorizationAmount__c</fullName>
        <label>Authorization Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AuthorizationReversalAmount__c</fullName>
        <label>Authorization Reversal Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AvailableToApplyBalanceAmount__c</fullName>
        <label>Available To Apply Balance Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CapturedAmount__c</fullName>
        <label>Captured Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Sales Order Payment Summary Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentAmountCurrency__c</fullName>
        <label>Payment Amount Currency</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentAmount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentMethodId__c</fullName>
        <label>Payment Method</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SalesOrderId__c</fullName>
        <label>Sales Order</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UnappliedAmount__c</fullName>
        <label>Unapplied Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761217720_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesOrderPaymentSummary_PaymentMeth_rel</label>
        <referenceTo>ssot__PaymentMethod__dlm</referenceTo>
        <relationshipLabel>SalesOrderPaymentSummary_PaymentMeth_rel</relationshipLabel>
        <relationshipName>rel_1697761217720_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761217857_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesOrderPaymentSummary_SalesOrderI_rel</label>
        <referenceTo>ssot__SalesOrder__dlm</referenceTo>
        <relationshipLabel>SalesOrderPaymentSummary_SalesOrderI_rel</relationshipLabel>
        <relationshipName>rel_1697761217857_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>